--- a/projects/ngui-lib/package.json
+++ b/projects/ngui-lib/package.json
@@ -1,9 +1,16 @@
 {
-  "name": "ngui-lib",
-  "email" : "khoicaominh.mmt@gmail.com",
-  "version": "0.0.2",
-  "peerDependencies": {
-    "@angular/common": "^8.0.0",
-    "@angular/core": "^8.0.0"
-  }
+    "name": "ngui-lib",
+    "email" : "khoicaominh.mmt@gmail.com",
+    "version": "0.0.2",
+    "peerDependencies": {
+        "@angular/common": "^8.0.0",
+        "@angular/core": "^8.0.0",
+        "@angular/platform-browser": "~8.0.0",
+        "hammerjs": "^2.0.8"
+    },
+    "dependencies": {
+        "@angular/material": "~8.0.0",
+        "@angular/cdk": "~8.0.0"
+        
+    }
 }
